--- a/Q_Safe/backend/requirements.txt
+++ b/Q_Safe/backend/requirements.txt
@@ -1,7 +1,6 @@
-Django==6.0
+Django>=5.0,<5.2
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 cryptography==42.0.1
 qrcode==7.4.2
-Pillow==10.2.0
-pyzbar==0.1.9
+Pillow>=10.2,<11
